plugins {
    java
    application
    `java-library`
    `maven-publish`
    signing
    alias(libs.plugins.nmcp)
    alias(libs.plugins.shadow)
}

group = "me.carscupcake"
version = "0.0.11"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
        sourceCompatibility = JavaVersion.VERSION_25
    }
    sourceSets {
        main {
            java {
                srcDir(file("src/main/java"))
                srcDir(file("src/autogenerated/java"))
            }
        }
    }
    modularity.inferModulePath = true

    withSourcesJar()
    withJavadocJar()
}
application {
    mainClass.set("me.carscupcake.sbremake.Main")
}

repositories {
    mavenCentral()
    maven("https://hub.spigotmc.org/nexus/content/repositories/snapshots/")
    maven("https://oss.sonatype.org/content/groups/public/")
    maven("https://repo.papermc.io/repository/maven-public/")
    maven("https://repo.dmulloy2.net/repository/public/")
    maven("https://mvn.lumine.io/repository/maven-public/")
    maven("https://jitpack.io")
    maven("https://libraries.minecraft.net")
}


dependencies {
    implementation(project(":sbremake-data"))
    implementation(libs.lombok)
    platform("com.intellectualsites.bom:bom-1.18.x:1.12")
    platform("org.jboss.shrinkwrap:shrinkwrap-bom:1.2.6")
    implementation("net.kyori:adventure-api:4.21.0")
    implementation("net.kyori:adventure-text-serializer-gson:4.21.0")
    implementation("net.kyori:adventure-text-serializer-json:4.21.0")
    implementation("org.reflections:reflections:0.10.2")
    implementation("com.fasterxml.jackson.core:jackson-databind:2.17.1")
    implementation("com.fasterxml.jackson.core:jackson-annotations:2.17.1")
    implementation("com.fasterxml.jackson.core:jackson-core:2.17.1")
    implementation("dev.hollowcube:polar:1.7.2")
    implementation(project(":minestom"))
    implementation("com.google.code.gson:gson:2.13.2")
    compileOnly("org.projectlombok:lombok:1.18.42")
    annotationProcessor("org.projectlombok:lombok:1.18.42")
    implementation("com.google.code.gson:gson:2.10.1")
    implementation("org.slf4j:slf4j-api:2.0.13")
    implementation("org.slf4j:slf4j-simple:2.0.13")
    implementation("org.apache.logging.log4j:log4j-core:2.25.3")
    implementation("org.jooq:joor:0.9.15")
    implementation("com.google.guava:guava:33.5.0-jre")
    implementation("org.kohsuke:github-api:1.326")
    implementation("net.sf.sevenzipjbinding:sevenzipjbinding:16.02-2.01")
    implementation("net.sf.sevenzipjbinding:sevenzipjbinding-all-platforms:16.02-2.01")
    implementation("com.github.f4b6a3:uuid-creator:6.0.0")
    implementation("org.apache.commons:commons-csv:1.14.0")
    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.19.0")
    implementation("com.palantir.javapoet:javapoet:0.7.0")
    implementation("com.github.ben-manes.caffeine:caffeine:3.2.3")

    testImplementation(libs.junit.api)
    testImplementation(libs.junit.params)
    testImplementation(libs.junit.suite.api)
    testRuntimeOnly(libs.junit.engine)
    testRuntimeOnly(libs.junit.suite.engine)
}

tasks.jar {
    manifest {
        attributes(
            "Main-Class" to "me.carscupcake.sbremake.Main", // Sets the main class for execution
            "Implementation-Title" to "SbRemake",
            "Implementation-Version" to project.version,
            "Implementation-Vendor" to "CarsCupcake",
            "Specification-Title" to "SbRemake",
            "Specification-Version" to project.version,
            "Specification-Vendor" to "CarsCupcake",
            "Multi-Release" to "true" // Indicates a multi-release JAR
        )
    }
}
tasks.test {
    useJUnitPlatform()
}
tasks.shadowJar {
    archiveFileName.set("SbRemake.jar")
    destinationDirectory.set(project.file("target"))
}

sourceSets.main {
    resources {
        srcDirs("src/main/resources")
    }
}

tasks.processResources {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType<Zip> {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

signing {
    isRequired = System.getenv("CI") != null

    val privateKey = System.getenv("GPG_PRIVATE_KEY")
    val keyPassphrase = System.getenv()["GPG_PASSPHRASE"]
    useInMemoryPgpKeys(privateKey, keyPassphrase)

    sign(publishing.publications)
}
